log/2022-03-24T14:49:46+08:00.log
[33m[01m[05m[ You are changing the branch: lab1-1-Extra ][0m
Autotest: Begin at Thu Mar 24 14:49:46 CST 2022
[32m[ readelf.c found ][0m
rm -rf *.o
rm readelf
rm: cannot remove 'readelf': No such file or directory
make: *** [Makefile:16: clean] Error 1
gcc -I./ -c main.c
gcc -I./ -c readelf.c
In file included from kerelf.h:29,
                 from readelf.c:7:
readelf.c: In function 'readelf':
readelf.c:80:49: error: 'Elf32_Phdr' {aka 'struct <anonymous>'} has no member named 'filesz'; did you mean 'p_filesz'?
   80 |          if (ROUNDDOWN(phdr1->p_offset + phdr1->filesz, 1LL << 12) == ROUNDDOWN(phdr2->p_offset, 1LL << 12))
      |                                                 ^~~~~~
types.h:47:36: note: in definition of macro 'ROUNDDOWN'
   47 | #define ROUNDDOWN(a, n) (((u_long)(a)) & ~((n)-1))
      |                                    ^
make: *** [Makefile:6: readelf.o] Error 1
[31m[01m[ Cannot find your readelf. Please check your readelf.c. ][0m
[33m[01m[ You got 0 (of 100) this time. Thu Mar 24 14:49:47 CST 2022 ][0m
Autotest: End at Thu Mar 24 14:49:47 CST 2022
